--- a/index.css
+++ b/index.css
@@ -1,24 +1,23 @@
-<!doctype html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title>Flexbox fam</title>
-  <link rel="stylesheet" href="index.css">
-</head>
-<body>
+html,
+body {
+  margin: 0;
+  padding: 0;
+}
 
-  <div class="container">
-    <div class="box box1">1</div>
-    <div class="box box2">2</div>
-    <div class="box box3">3</div>
-    <div class="box box4">4</div>
-    <div class="box box5">5</div>
-    <div class="box box6">6</div>
-    <div class="box box7">7</div>
-    <div class="box box8">8</div>
-    <div class="box box9">9</div>
-    <div class="box box10">10</div>
-  </div>
+header {
+  background-color: #FBFFF4;
+  height: 100%;
+  width: 100%;
+}
 
-</body>
-</html>
+main {
+  background-color: #92C9D5;
+  width: 100%;
+  height: 100%;
+}
+
+footer {
+  background-color: #DAEEEF;
+  height: 100%;
+  width: 100%;
+}
